--- a/index.html
+++ b/index.html
@@ -1056,28 +1056,36 @@
         pointer-events: none;
     }
 
-    .phone-action-btn.call-btn {
-        background: #2196F3;
+    .phone-action-btn.call-btn,
+    .phone-action-btn.call-btn:link,
+    .phone-action-btn.call-btn:visited,
+    .phone-action-btn.call-btn:focus,
+    .phone-action-btn.call-btn:active {
+        background: #2196F3 !important;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.15) !important;
+        transform: scale(1) !important;
     }
 
     .phone-action-btn.call-btn:hover {
-        background: #1976D2;
-        transform: scale(1.1);
-        box-shadow: 0 3px 6px rgba(33,150,243,0.4);
+        background: #1976D2 !important;
+        transform: scale(1.1) !important;
+        box-shadow: 0 3px 6px rgba(33,150,243,0.4) !important;
     }
 
-    .phone-action-btn.whatsapp-btn {
-        background: #25D366;
+    .phone-action-btn.whatsapp-btn,
+    .phone-action-btn.whatsapp-btn:link,
+    .phone-action-btn.whatsapp-btn:visited,
+    .phone-action-btn.whatsapp-btn:focus,
+    .phone-action-btn.whatsapp-btn:active {
+        background: #25D366 !important;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.15) !important;
+        transform: scale(1) !important;
     }
 
     .phone-action-btn.whatsapp-btn:hover {
-        background: #128C7E;
-        transform: scale(1.1);
-        box-shadow: 0 3px 6px rgba(37,211,102,0.4);
-    }
-
-    .phone-action-btn:active {
-        transform: scale(0.95);
+        background: #128C7E !important;
+        transform: scale(1.1) !important;
+        box-shadow: 0 3px 6px rgba(37,211,102,0.4) !important;
     }
 
     .empty-state {
@@ -1196,6 +1204,29 @@
 
         .client-actions {
             gap: 10px;
+        }
+
+        /* Forçar cores originais dos botões no mobile */
+        .phone-action-btn.call-btn,
+        .phone-action-btn.call-btn:link,
+        .phone-action-btn.call-btn:visited,
+        .phone-action-btn.call-btn:focus,
+        .phone-action-btn.call-btn:active,
+        .phone-action-btn.call-btn:focus-visible {
+            background: #2196F3 !important;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.15) !important;
+            transform: scale(1) !important;
+        }
+
+        .phone-action-btn.whatsapp-btn,
+        .phone-action-btn.whatsapp-btn:link,
+        .phone-action-btn.whatsapp-btn:visited,
+        .phone-action-btn.whatsapp-btn:focus,
+        .phone-action-btn.whatsapp-btn:active,
+        .phone-action-btn.whatsapp-btn:focus-visible {
+            background: #25D366 !important;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.15) !important;
+            transform: scale(1) !important;
         }
 
         .modal-container {
