--- a/index.html
+++ b/index.html
@@ -866,6 +866,9 @@
 
     .search-container {
         position: relative;
+        display: flex;
+        gap: 8px;
+        align-items: center;
     }
 
     .search-icon {
@@ -876,10 +879,11 @@
         font-size: 18px;
         color: #999;
         pointer-events: none;
+        z-index: 1;
     }
 
     .search-input {
-        width: 100%;
+        flex: 1;
         padding: 12px 12px 12px 42px;
         border: 2px solid #e0e0e0;
         border-radius: 24px;
@@ -893,6 +897,33 @@
         outline: none;
         border-color: var(--primary-color);
         box-shadow: 0 0 0 3px rgba(66, 133, 244, 0.1);
+    }
+
+    .search-qr-btn {
+        width: 44px;
+        height: 44px;
+        border: none;
+        background: var(--primary-color);
+        color: white;
+        border-radius: 50%;
+        font-size: 20px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-shrink: 0;
+        box-shadow: 0 2px 6px rgba(66, 133, 244, 0.3);
+    }
+
+    .search-qr-btn:hover {
+        background: #1976D2;
+        transform: scale(1.05);
+        box-shadow: 0 4px 8px rgba(66, 133, 244, 0.4);
+    }
+
+    .search-qr-btn:active {
+        transform: scale(0.95);
     }
 
     .search-input::placeholder {
@@ -1370,6 +1401,9 @@
                 id="search-input"
                 placeholder="Buscar por nome, endereço ou telefone..."
             >
+            <button class="search-qr-btn" id="search-qr-btn" title="Buscar por QR Code">
+                📷
+            </button>
         </div>
     </div>
 
@@ -1381,6 +1415,34 @@
                 <div class="empty-state-text">Nenhum cliente cadastrado</div>
                 <div class="empty-state-subtext">Adicione clientes para vê-los aqui</div>
             </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Scanner QR para Busca -->
+<div class="modal-overlay" id="modal-search-qr" style="z-index: 10005;">
+    <div class="modal-container" style="max-width: 500px;">
+        <div class="modal-body" style="padding: 20px;">
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px;">
+                <h3 style="margin: 0; font-size: 18px; color: #333;">📷 Buscar Cliente por QR Code</h3>
+                <button class="modal-close" id="search-qr-close" style="width: 32px; height: 32px; border: none; background: #f5f5f5; border-radius: 50%; cursor: pointer; font-size: 18px; display: flex; align-items: center; justify-content: center;">✕</button>
+            </div>
+
+            <div class="qr-camera-container" id="search-qr-camera-container" style="position: relative; width: 100%; aspect-ratio: 1; background: #000; border-radius: 12px; overflow: hidden; margin-bottom: 12px;">
+                <video id="search-qr-video" autoplay playsinline style="width: 100%; height: 100%; object-fit: cover;"></video>
+                <canvas id="search-qr-canvas" style="display: none;"></canvas>
+
+                <div class="qr-overlay" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; border: 2px solid rgba(255,255,255,0.5); border-radius: 12px; pointer-events: none;">
+                    <div style="position: absolute; top: 20px; left: 20px; width: 40px; height: 40px; border-top: 3px solid #4285f4; border-left: 3px solid #4285f4; border-radius: 8px 0 0 0;"></div>
+                    <div style="position: absolute; top: 20px; right: 20px; width: 40px; height: 40px; border-top: 3px solid #4285f4; border-right: 3px solid #4285f4; border-radius: 0 8px 0 0;"></div>
+                    <div style="position: absolute; bottom: 20px; left: 20px; width: 40px; height: 40px; border-bottom: 3px solid #4285f4; border-left: 3px solid #4285f4; border-radius: 0 0 0 8px;"></div>
+                    <div style="position: absolute; bottom: 20px; right: 20px; width: 40px; height: 40px; border-bottom: 3px solid #4285f4; border-right: 3px solid #4285f4; border-radius: 0 0 8px 0;"></div>
+                </div>
+
+                <div class="qr-status" id="search-qr-status" style="position: absolute; bottom: 16px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.7); color: white; padding: 8px 16px; border-radius: 20px; font-size: 14px; white-space: nowrap;">Procurando QR Code...</div>
+            </div>
+
+            <button class="btn btn-secondary" id="search-qr-cancel" style="width: 100%; padding: 12px; border: none; background: #f5f5f5; color: #666; border-radius: 8px; cursor: pointer; font-size: 15px; font-weight: 600;">Cancelar</button>
         </div>
     </div>
 </div>
@@ -4098,6 +4160,157 @@ function escapeHtml(text) {
 setTimeout(() => {
     loadClients();
 }, 2000);
+
+// ===========================
+// SCANNER QR PARA BUSCA DE CLIENTE
+// ===========================
+
+const searchQRModal = document.getElementById('modal-search-qr');
+const searchQRBtn = document.getElementById('search-qr-btn');
+const searchQRClose = document.getElementById('search-qr-close');
+const searchQRCancel = document.getElementById('search-qr-cancel');
+const searchQRVideo = document.getElementById('search-qr-video');
+const searchQRCanvas = document.getElementById('search-qr-canvas');
+const searchQRStatus = document.getElementById('search-qr-status');
+
+let searchQRStream = null;
+let searchQRScanning = false;
+
+// Abrir scanner de busca
+searchQRBtn.addEventListener('click', async () => {
+    searchQRModal.classList.add('active');
+    searchQRScanning = true;
+
+    try {
+        await startSearchQRCamera();
+    } catch (error) {
+        console.error('Erro ao abrir câmera:', error);
+        showToast(
+            'Erro ao abrir câmera',
+            'Verifique as permissões do navegador',
+            'error',
+            4000
+        );
+        closeSearchQRModal();
+    }
+});
+
+// Fechar modal
+function closeSearchQRModal() {
+    searchQRModal.classList.remove('active');
+    searchQRScanning = false;
+    stopSearchQRCamera();
+}
+
+searchQRClose.addEventListener('click', closeSearchQRModal);
+searchQRCancel.addEventListener('click', closeSearchQRModal);
+
+searchQRModal.addEventListener('click', (e) => {
+    if (e.target === searchQRModal) {
+        closeSearchQRModal();
+    }
+});
+
+// Iniciar câmera
+async function startSearchQRCamera() {
+    try {
+        searchQRStream = await navigator.mediaDevices.getUserMedia({
+            video: { facingMode: 'environment' }
+        });
+
+        searchQRVideo.srcObject = searchQRStream;
+        searchQRVideo.play();
+
+        // Começar a escanear
+        scanSearchQRCode();
+    } catch (error) {
+        throw error;
+    }
+}
+
+// Parar câmera
+function stopSearchQRCamera() {
+    if (searchQRStream) {
+        searchQRStream.getTracks().forEach(track => track.stop());
+        searchQRStream = null;
+    }
+
+    if (searchQRVideo.srcObject) {
+        searchQRVideo.srcObject = null;
+    }
+}
+
+// Escanear QR code
+function scanSearchQRCode() {
+    if (!searchQRScanning) return;
+
+    const canvas = searchQRCanvas;
+    const video = searchQRVideo;
+
+    if (video.readyState === video.HAVE_ENOUGH_DATA) {
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const code = jsQR(imageData.data, imageData.width, imageData.height);
+
+        if (code) {
+            // QR Code detectado!
+            searchQRScanning = false;
+            const qrData = code.data;
+
+            searchQRStatus.textContent = '✓ QR Code detectado!';
+            searchQRStatus.style.background = 'rgba(52, 168, 83, 0.9)';
+
+            // Buscar cliente pelo QR code
+            setTimeout(() => {
+                searchClientByQRCode(qrData);
+                closeSearchQRModal();
+            }, 500);
+
+            return;
+        }
+    }
+
+    // Continuar escaneando
+    requestAnimationFrame(scanSearchQRCode);
+}
+
+// Buscar cliente pelo QR code
+async function searchClientByQRCode(qrCode) {
+    console.log('Buscando cliente com QR code:', qrCode);
+
+    // Procurar cliente que tenha esse QR code no endereço
+    const client = allClients.find(c =>
+        c.address && c.address.includes(qrCode)
+    );
+
+    if (client) {
+        // Cliente encontrado! Filtrar lista para mostrar apenas ele
+        searchInput.value = qrCode;
+        filteredClients = [client];
+        renderClients(filteredClients);
+        updateClientCount(allClients.length);
+
+        showToast(
+            '✓ Cliente encontrado!',
+            `${client.name}`,
+            'success',
+            3000
+        );
+    } else {
+        // Cliente não encontrado
+        showToast(
+            '⚠️ Cliente não encontrado',
+            `Nenhum cliente cadastrado com o QR code: ${qrCode}`,
+            'warning',
+            4000
+        );
+    }
+}
 
 // ===========================
 // SISTEMA DE ROTAS DE ENTREGA
