--- a/index.html
+++ b/index.html
@@ -640,6 +640,24 @@
         }
     }
 
+    @keyframes highlight-pulse {
+        0% {
+            background: #fff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transform: scale(1);
+        }
+        50% {
+            background: #e3f2fd;
+            box-shadow: 0 4px 12px rgba(33,150,243,0.3);
+            transform: scale(1.02);
+        }
+        100% {
+            background: #fff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transform: scale(1);
+        }
+    }
+
     .address-label {
         font-size: 12px;
         font-weight: 600;
@@ -872,6 +890,14 @@
 
     .search-container {
         position: relative;
+        display: flex;
+        gap: 8px;
+        align-items: center;
+    }
+
+    .search-input-wrapper {
+        position: relative;
+        flex: 1;
     }
 
     .search-icon {
@@ -903,6 +929,33 @@
 
     .search-input::placeholder {
         color: #999;
+    }
+
+    .btn-scan-package {
+        background: var(--primary-color);
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 44px;
+        height: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        flex-shrink: 0;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+    }
+
+    .btn-scan-package:hover {
+        background: #1976D2;
+        transform: scale(1.05);
+        box-shadow: 0 3px 6px rgba(33,150,243,0.4);
+    }
+
+    .btn-scan-package:active {
+        transform: scale(0.95);
     }
 
     .sidebar-content {
@@ -1380,13 +1433,16 @@
 
     <div class="sidebar-search">
         <div class="search-container">
-            <span class="search-icon">🔍</span>
-            <input
-                type="text"
-                class="search-input"
-                id="search-input"
-                placeholder="Buscar por nome, endereço ou telefone..."
-            >
+            <div class="search-input-wrapper">
+                <span class="search-icon">🔍</span>
+                <input
+                    type="text"
+                    class="search-input"
+                    id="search-input"
+                    placeholder="Buscar por nome, endereço ou telefone..."
+                >
+            </div>
+            <button class="btn-scan-package" id="btn-scan-package" title="Escanear código QR do pacote">📦</button>
         </div>
     </div>
 
@@ -1469,6 +1525,50 @@
         <div class="form-footer">
             <button type="button" class="btn btn-secondary" id="btn-cancel">Cancelar</button>
             <button type="submit" class="btn btn-primary" id="btn-save" form="form-add-client">Salvar Cliente</button>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Scanner de Pacotes -->
+<div class="modal-overlay" id="modal-scan-package">
+    <div class="modal-container">
+        <div class="modal-body">
+            <!-- Scanner QR Code -->
+            <div class="qr-scanner-section">
+                <div class="scanner-title">
+                    <span>📦 Escanear Código do Pacote</span>
+                    <button class="modal-close" id="modal-scan-close">✕</button>
+                </div>
+
+                <div class="qr-camera-container" id="qr-package-camera-container">
+                    <video id="qr-package-video" autoplay playsinline></video>
+                    <canvas id="qr-package-canvas"></canvas>
+
+                    <div class="qr-overlay">
+                        <div class="qr-overlay-bottom-left"></div>
+                        <div class="qr-overlay-bottom-right"></div>
+                    </div>
+
+                    <div class="scanning-line"></div>
+
+                    <div class="qr-status" id="qr-package-status">Procurando código QR...</div>
+
+                    <div class="camera-controls">
+                        <button class="camera-btn" id="btn-package-stop-camera" title="Fechar câmera">✕</button>
+                        <button class="camera-btn" id="btn-package-switch-camera" title="Trocar câmera">🔄</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Resultado da busca -->
+            <div class="scan-result" id="scan-result" style="display: none; margin-top: 20px; padding: 16px; background: #f5f5f5; border-radius: 8px;">
+                <div style="font-weight: 600; color: #333; margin-bottom: 8px;">📋 Cliente Encontrado:</div>
+                <div id="scan-result-text" style="color: #666;"></div>
+            </div>
+        </div>
+
+        <div class="form-footer">
+            <button type="button" class="btn btn-secondary" id="btn-package-close">Fechar</button>
         </div>
     </div>
 </div>
@@ -4804,6 +4904,310 @@ async function calculateDirectionsRoute(origin, deliveryPoints) {
         }
     });
 }
+
+// ===========================
+// SCANNER DE PACOTES
+// ===========================
+
+const modalScanPackage = document.getElementById('modal-scan-package');
+const btnScanPackage = document.getElementById('btn-scan-package');
+const btnModalScanClose = document.getElementById('modal-scan-close');
+const btnPackageClose = document.getElementById('btn-package-close');
+const btnPackageStopCamera = document.getElementById('btn-package-stop-camera');
+const btnPackageSwitchCamera = document.getElementById('btn-package-switch-camera');
+const qrPackageCameraContainer = document.getElementById('qr-package-camera-container');
+const qrPackageVideo = document.getElementById('qr-package-video');
+const qrPackageCanvas = document.getElementById('qr-package-canvas');
+const qrPackageStatus = document.getElementById('qr-package-status');
+const scanResult = document.getElementById('scan-result');
+const scanResultText = document.getElementById('scan-result-text');
+
+let packageVideoStream = null;
+let packageScanningInterval = null;
+let packageCurrentFacingMode = 'environment';
+let packageLastScannedCode = null;
+
+// Abrir modal de scanner de pacotes
+async function openPackageScanner() {
+    modalScanPackage.classList.add('active');
+    document.body.style.overflow = 'hidden';
+
+    // Resetar resultado anterior
+    scanResult.style.display = 'none';
+    scanResultText.textContent = '';
+
+    // Verificar se câmera está disponível
+    if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+        showToast(
+            'Câmera não disponível',
+            'Seu navegador não suporta acesso à câmera',
+            'error',
+            5000
+        );
+        return;
+    }
+
+    // Abrir câmera automaticamente
+    try {
+        await startPackageCamera();
+    } catch (error) {
+        console.error('Erro ao abrir câmera:', error);
+
+        let errorMessage = 'Verifique as permissões do navegador';
+
+        if (error.name === 'NotAllowedError' || error.name === 'PermissionDeniedError') {
+            errorMessage = 'Permissão negada. Permita o acesso à câmera nas configurações do navegador.';
+        } else if (error.name === 'NotFoundError' || error.name === 'DevicesNotFoundError') {
+            errorMessage = 'Nenhuma câmera encontrada no dispositivo.';
+        } else if (error.name === 'NotReadableError' || error.name === 'TrackStartError') {
+            errorMessage = 'Câmera já está em uso por outro aplicativo.';
+        }
+
+        showToast(
+            'Erro ao abrir câmera',
+            errorMessage,
+            'error',
+            7000
+        );
+    }
+}
+
+// Fechar modal de scanner de pacotes
+function closePackageScanner() {
+    modalScanPackage.classList.remove('active');
+    document.body.style.overflow = '';
+    stopPackageCamera();
+}
+
+// Iniciar câmera do scanner de pacotes
+async function startPackageCamera() {
+    stopPackageCamera();
+
+    const constraints = {
+        video: {
+            facingMode: packageCurrentFacingMode,
+            width: { ideal: 1280 },
+            height: { ideal: 720 }
+        }
+    };
+
+    try {
+        packageVideoStream = await navigator.mediaDevices.getUserMedia(constraints);
+        qrPackageVideo.srcObject = packageVideoStream;
+        qrPackageCameraContainer.classList.add('active');
+
+        return new Promise((resolve, reject) => {
+            qrPackageVideo.onloadedmetadata = async () => {
+                try {
+                    await qrPackageVideo.play();
+                    startPackageScanning();
+                    resolve();
+                } catch (playError) {
+                    console.error('Erro ao iniciar reprodução do vídeo:', playError);
+                    reject(playError);
+                }
+            };
+
+            qrPackageVideo.onerror = (error) => {
+                console.error('Erro no elemento de vídeo:', error);
+                reject(error);
+            };
+
+            setTimeout(() => {
+                if (qrPackageVideo.readyState < 2) {
+                    reject(new Error('Timeout ao carregar vídeo'));
+                }
+            }, 10000);
+        });
+
+    } catch (error) {
+        stopPackageCamera();
+        qrPackageCameraContainer.classList.remove('active');
+        throw error;
+    }
+}
+
+// Parar câmera do scanner de pacotes
+function stopPackageCamera() {
+    if (packageVideoStream) {
+        packageVideoStream.getTracks().forEach(track => {
+            track.stop();
+            track.enabled = false;
+        });
+        packageVideoStream = null;
+    }
+
+    if (packageScanningInterval) {
+        clearInterval(packageScanningInterval);
+        packageScanningInterval = null;
+    }
+
+    qrPackageVideo.pause();
+    qrPackageVideo.srcObject = null;
+    qrPackageVideo.load();
+
+    qrPackageVideo.onloadedmetadata = null;
+    qrPackageVideo.onerror = null;
+
+    qrPackageCameraContainer.classList.remove('active');
+    qrPackageStatus.textContent = 'Procurando código QR...';
+    qrPackageStatus.classList.remove('success');
+    packageLastScannedCode = null;
+}
+
+// Iniciar loop de scanning do pacote
+function startPackageScanning() {
+    const canvasContext = qrPackageCanvas.getContext('2d', { willReadFrequently: true });
+
+    packageScanningInterval = setInterval(() => {
+        if (qrPackageVideo.readyState === qrPackageVideo.HAVE_ENOUGH_DATA) {
+            qrPackageCanvas.width = qrPackageVideo.videoWidth;
+            qrPackageCanvas.height = qrPackageVideo.videoHeight;
+
+            canvasContext.drawImage(qrPackageVideo, 0, 0, qrPackageCanvas.width, qrPackageCanvas.height);
+
+            const imageData = canvasContext.getImageData(0, 0, qrPackageCanvas.width, qrPackageCanvas.height);
+
+            const code = jsQR(imageData.data, imageData.width, imageData.height, {
+                inversionAttempts: "dontInvert",
+            });
+
+            if (code && code.data !== packageLastScannedCode) {
+                packageLastScannedCode = code.data;
+                console.log('QR Code do pacote detectado:', code.data);
+
+                qrPackageStatus.textContent = '✅ Código detectado!';
+                qrPackageStatus.classList.add('success');
+
+                // Buscar cliente pelo código QR
+                findClientByQRCode(code.data);
+            }
+        }
+    }, 100);
+}
+
+// Buscar cliente pelo código QR do pacote
+async function findClientByQRCode(qrCode) {
+    try {
+        // Buscar no banco de dados de clientes
+        const { data: clients, error } = await supabase
+            .from('clients')
+            .select('*')
+            .ilike('address', `%${qrCode}%`);
+
+        if (error) throw error;
+
+        if (clients && clients.length > 0) {
+            // Cliente encontrado
+            const client = clients[0];
+
+            // Mostrar resultado
+            scanResult.style.display = 'block';
+            scanResultText.innerHTML = `
+                <strong>${escapeHtml(client.name)}</strong><br>
+                📞 ${escapeHtml(client.phone || 'Sem telefone')}<br>
+                📍 ${escapeHtml(client.address.split('\n')[0])}
+            `;
+
+            // Filtrar lista para mostrar apenas este cliente
+            highlightClientInList(client);
+
+            // Parar câmera
+            stopPackageCamera();
+
+            // Toast de sucesso
+            showToast(
+                '✅ Cliente encontrado!',
+                `${client.name}`,
+                'success',
+                3000
+            );
+
+            // Fechar modal após 2 segundos
+            setTimeout(() => {
+                closePackageScanner();
+            }, 2000);
+
+        } else {
+            // Cliente não encontrado
+            scanResult.style.display = 'block';
+            scanResultText.innerHTML = `
+                <strong style="color: #ea4335;">❌ Cliente não encontrado</strong><br>
+                O código <code>${escapeHtml(qrCode)}</code> não está cadastrado.
+            `;
+
+            showToast(
+                'Cliente não encontrado',
+                'O código QR não corresponde a nenhum cliente cadastrado',
+                'error',
+                4000
+            );
+
+            // Resetar scanner para permitir novo scan
+            setTimeout(() => {
+                packageLastScannedCode = null;
+                qrPackageStatus.textContent = 'Procurando código QR...';
+                qrPackageStatus.classList.remove('success');
+            }, 3000);
+        }
+
+    } catch (error) {
+        console.error('Erro ao buscar cliente:', error);
+        showToast(
+            'Erro na busca',
+            'Não foi possível buscar o cliente',
+            'error',
+            4000
+        );
+    }
+}
+
+// Destacar cliente na lista
+function highlightClientInList(client) {
+    // Filtrar lista para mostrar apenas este cliente
+    searchInput.value = client.name;
+
+    // Disparar evento de busca
+    const event = new Event('input', { bubbles: true });
+    searchInput.dispatchEvent(event);
+
+    // Scroll até o cliente na lista
+    setTimeout(() => {
+        const clientCard = document.querySelector(`[data-client-id="${client.id}"]`);
+        if (clientCard) {
+            clientCard.scrollIntoView({ behavior: 'smooth', block: 'center' });
+
+            // Adicionar destaque visual temporário
+            clientCard.style.animation = 'highlight-pulse 1.5s ease-in-out';
+
+            setTimeout(() => {
+                clientCard.style.animation = '';
+            }, 1500);
+        }
+    }, 100);
+}
+
+// Event listeners do scanner de pacotes
+btnScanPackage.addEventListener('click', openPackageScanner);
+btnModalScanClose.addEventListener('click', closePackageScanner);
+btnPackageClose.addEventListener('click', closePackageScanner);
+
+btnPackageStopCamera.addEventListener('click', () => {
+    stopPackageCamera();
+});
+
+btnPackageSwitchCamera.addEventListener('click', async () => {
+    packageCurrentFacingMode = packageCurrentFacingMode === 'environment' ? 'user' : 'environment';
+    stopPackageCamera();
+    await startPackageCamera();
+});
+
+// Fechar modal ao clicar fora
+modalScanPackage.addEventListener('click', (e) => {
+    if (e.target === modalScanPackage) {
+        closePackageScanner();
+    }
+});
 
 // ===========================
 // CLEANUP
